Capturando Erros (+ Erro com async)

--- a/requests-http/src/app/cursos/cursos-lista/cursos-lista.component.html
+++ b/requests-http/src/app/cursos/cursos-lista/cursos-lista.component.html
@@ -6,6 +6,7 @@
             </div>
             <div class="col text-end">
                 <button class="btn btn-primary" [routerLink]="['novo']">Novo curso</button>
+                <button class="btn btn-secondary" (click)="onRefresh()">Atualizar</button>
             </div>
         </div>
     </div>
@@ -40,7 +41,12 @@
             </tbody>
         </table>
         <ng-template #loading>
-            <span>Carregando cursos...</span>
+            <div *ngIf="error$ | async; else loadingNoError">
+                Erro ao carregar cursos. Tente novamente mais tarde.
+            </div>
+            <ng-template #loadingNoError>
+                <span>Carregando cursos...</span>
+            </ng-template>
         </ng-template>
         
     </div>
