Http: Criando formulário para criar e editar cursos

--- a/requests-http/src/app/cursos/cursos-lista/cursos-lista.component.html
+++ b/requests-http/src/app/cursos/cursos-lista/cursos-lista.component.html
@@ -40,14 +40,19 @@
                 </tr>
             </tbody>
         </table>
+
         <ng-template #loading>
+            <span>Carregando cursos...</span>
+        </ng-template>
+
+        <!-- <ng-template #loading>
             <div *ngIf="error$ | async; else loadingNoError">
                 Erro ao carregar cursos. Tente novamente mais tarde.
             </div>
             <ng-template #loadingNoError>
                 <span>Carregando cursos...</span>
             </ng-template>
-        </ng-template>
-        
+        </ng-template> -->
+
     </div>
 </div>
