--- a/requests-http/src/app/cursos/cursos-lista/cursos-lista.component.html
+++ b/requests-http/src/app/cursos/cursos-lista/cursos-lista.component.html
@@ -6,7 +6,7 @@
             </div>
             <div class="col text-end">
                 <button class="btn btn-primary" [routerLink]="['novo']">Novo curso</button>
-                <button class="btn btn-secondary" (click)="onRefresh()">Atualizar</button>
+                <button class="btn btn-secondary" (click)="onRefresh()">Recarregar cursos</button>
             </div>
         </div>
     </div>
@@ -29,7 +29,7 @@
                     <td> {{ curso.nome }} </td>
                     <td>
                         <div class="text-end">
-                            <button class="btn btn-outline-warning mb-1 btn-sm">
+                            <button class="btn btn-outline-warning mb-1 btn-sm" (click)="onEdit(curso.id)">
                                 Atualizar
                             </button>
                             <button class="btn btn-outline-danger mb-1 btn-sm">
