--- a/requests-http/src/app/cursos/cursos-lista/cursos-lista.component.html
+++ b/requests-http/src/app/cursos/cursos-lista/cursos-lista.component.html
@@ -32,7 +32,7 @@
                             <button class="btn btn-outline-warning mb-1 btn-sm" (click)="onEdit(curso.id)">
                                 Atualizar
                             </button>
-                            <button class="btn btn-outline-danger mb-1 btn-sm">
+                            <button class="btn btn-outline-danger mb-1 btn-sm" (click)="onDelete(curso.id)">
                                 Remover
                             </button>
                         </div>
@@ -56,3 +56,11 @@
 
     </div>
 </div>
+
+<ng-template #deleteModal>
+    <div class="modal-body text-center">
+        <p>Quer realmente remover este curso?</p>
+        <button type="button" class="btn btn-default" (click)="onConfirmDelete()">Sim</button>
+        <button type="button" class="btn btn-primary" (click)="onDeclineDelete()">Não</button>
+    </div>
+</ng-template>
