--- a/requests-http/src/app/upload-file/upload-file/upload-file.component.html
+++ b/requests-http/src/app/upload-file/upload-file/upload-file.component.html
@@ -1,4 +1,7 @@
 <div class="mt-3 mb-3">
     <label for="formFile" class="form-label">Selecione o arquivo:</label>
-    <input class="form-control" type="file" id="formFile" (change)="onChange(uploadFile)" #uploadFile multiple >
+    <input class="form-control" type="file" id="formFile" (change)="onChange(uploadFile)" #uploadFile multiple>
+</div>
+<div class="mt-3 mb-3">
+    <button class="btn btn-primary" type="button" (click)="onUpload()" [disabled]="!files" >Upload</button>
 </div>
