--- a/requests-http/src/app/upload-file/upload-file/upload-file.component.html
+++ b/requests-http/src/app/upload-file/upload-file/upload-file.component.html
@@ -1,7 +1,12 @@
 <div class="mt-3 mb-3">
     <label for="formFile" class="form-label">Selecione o arquivo:</label>
     <input class="form-control" type="file" id="formFile" (change)="onChange(uploadFile)" #uploadFile multiple>
+    <div class="mt-2">
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" [style.width]="progress + '%'">{{ progress }}%</div>
+        </div>
+    </div>
 </div>
 <div class="mt-3 mb-3">
-    <button class="btn btn-primary" type="button" (click)="onUpload()" [disabled]="!files" >Upload</button>
+    <button class="btn btn-primary" type="button" (click)="onUpload()" [disabled]="!files">Upload</button>
 </div>
