--- a/requests-http/src/app/upload-file/upload-file/upload-file.component.html
+++ b/requests-http/src/app/upload-file/upload-file/upload-file.component.html
@@ -10,3 +10,10 @@
 <div class="mt-3 mb-3">
     <button class="btn btn-primary" type="button" (click)="onUpload()" [disabled]="!files">Upload</button>
 </div>
+
+<div class="mt-3 mb-3">
+    <button class="btn btn-primary" type="button" (click)="onDownloadExcel()">Download Excel</button>
+</div>
+<div class="mt-3 mb-3 ml-3">
+    <button class="btn btn-primary" type="button" (click)="onDownloadPDF()">Download PDF</button>
+</div>
