--- a/requests-http/src/app/app.component.html
+++ b/requests-http/src/app/app.component.html
@@ -19,6 +19,9 @@
                 <li class="nav-item">
                     <a class="nav-link" [routerLink]="['/upload']" routerLinkActive="active">Upload Arquivo</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/pesquisa-reativa']" routerLinkActive="active">Pesquisa Reativa</a>
+                </li>
             </ul>
         </div>
     </div>
