--- a/requests-http/src/app/reactive-search/lib-search/lib-search.component.html
+++ b/requests-http/src/app/reactive-search/lib-search/lib-search.component.html
@@ -24,18 +24,18 @@
         </div>
     </div>
     <div class="search-list">
-        <h3>303 Records Found</h3>
+        <h3>{{total}} Records Found</h3>
         <table class="table" id="myTable">
             <thead>
                 <tr>
                     <th>Title</th>
-                    <th>Category</th>
+                    <th>Description</th>
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>HTML</td>
-                    <td>Web Development</td>
+                <tr *ngFor="let result of results$ | async" >
+                    <td>{{result.name}}</td>
+                    <td>{{result.description}}</td>
                 </tr>
             </tbody>
         </table>
