--- a/10-crud-angular/crud-angular/src/app/courses/courses/courses.component.html
+++ b/10-crud-angular/crud-angular/src/app/courses/courses/courses.component.html
@@ -1,30 +1,34 @@
 <mat-card>
-    <mat-toolbar color="primary">
-        Meus cursos
-    </mat-toolbar>
+  <mat-toolbar color="primary"> Meus cursos </mat-toolbar>
 
+  <div *ngIf="courses$ | async as courses; else loading">
     <!-- O próprio Angular Material sabe se a informação vem de um Observable,
         Então não precisamos fazer um ng-for usando um subscribe no component.
         E daí com o ng-for teríamos que colocar um | async.
         Mas com o Material Table, ele já trata tudo isso. -->
     <table mat-table [dataSource]="courses" class="mat-elevation-z8">
-
-        <!--- Note that these columns can be defined in any order.
+      <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
-    
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Curso </th>
-            <td mat-cell *matCellDef="let course"> {{ course.name }} </td>
-        </ng-container>
-    
-        <!-- Category Column -->
-        <ng-container matColumnDef="category">
-            <th mat-header-cell *matHeaderCellDef> Categoria </th>
-            <td mat-cell *matCellDef="let course"> {{ course.category }} </td>
-        </ng-container>
-    
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Curso</th>
+        <td mat-cell *matCellDef="let course">{{ course.name }}</td>
+      </ng-container>
+
+      <!-- Category Column -->
+      <ng-container matColumnDef="category">
+        <th mat-header-cell *matHeaderCellDef>Categoria</th>
+        <td mat-cell *matCellDef="let course">{{ course.category }}</td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
+  </div>
+  <ng-template #loading>
+    <div class="loading-spinner">
+      <mat-spinner></mat-spinner>
+    </div>
+  </ng-template>
 </mat-card>
