--- a/10-crud-angular/crud-angular/src/app/courses/courses/courses.component.html
+++ b/10-crud-angular/crud-angular/src/app/courses/courses/courses.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <mat-toolbar color="primary"> Meus cursos </mat-toolbar>
+  <mat-toolbar color="primary"> Cursos disponíveis </mat-toolbar>
 
   <div *ngIf="courses$ | async as courses; else loading">
     <!-- O próprio Angular Material sabe se a informação vem de um Observable,
